--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body id="inicio">
     <header class="header">
-        <a href="/">
+        <a href="#inicio">
             <img 
                 class="header-logo"
                 src="./assets/logo.jpg" 
@@ -26,8 +26,8 @@
             <ul class="header-list">
                 <li><a href="#inicio" class="nav-link">Inicio</a></li>
                 <li><a href="#servicios" class="nav-link">Servicios</a></li>
-                <li><a href="#" class="nav-link">Nosotros</a></li>
-                <li><a href="#" class="nav-link">Contacto</a></li>
+                <li><a href="#calculadoras" class="nav-link">Calculadoras</a></li>
+                <li><a href="#nosotros" class="nav-link">Nosotros</a></li>
             </ul>
         </nav>
         <button class="header-hamburger" id="hamburgerBtn" aria-label="Abrir menú">
@@ -41,7 +41,7 @@
         <section class="home">
             <div class="home-info">
                 <h1 class="home-title">
-                    <span>Estudio Juridico</span> 
+                    <span>Estudio Jurídico</span> 
                     Erreguerena & Sabalua 
                 </h1>
                 <div>
@@ -51,9 +51,13 @@
                         Somos un equipo de abogados con amplia experiencia y formación.
                         Brindamos asesoramiento y representación para problemas legales <strong>en Azul y la zona</strong>.
                     </p>
-                    <button class="home-btn">
-                        Agenda una entrevista
-                    </button>
+                    <a  href="https://wa.link/afriol" 
+                        target="_blank" 
+                        rel="noopener noreferrer" 
+                        class="home-btn"
+                    >
+                        Agendá una entrevista
+                    </a>
                 </div>
             </div>
             <img 
@@ -63,7 +67,8 @@
             >
         </section>
         
-        <section id="servicios">
+        <div class="space-to-scroll" id="servicios"></div>
+        <section>
             <h2 class="services-title">
                 <span>Nuestros</span> <strong>Servicios</strong>
             </h2>
@@ -90,7 +95,7 @@
                         <h3 class="services-card-title">Accidentes de transito</h3>
                         <p class="services-card-p">
                             Si sufriste un accidente de tránsito por culpa de otro conductor, 
-                            podes reclamar una indemnización por los daños y perjuicios sufridos.
+                            podés reclamar una indemnización por los daños y perjuicios sufridos.
                         </p>
                     </header>
                     <figure>
@@ -167,7 +172,7 @@
                     </figure>
                 </article>
             </div>
-
+            <div class="space-to-scroll" id="calculadoras"></div>
             <h2 class="calculators-title">Nuestras Calculadoras</h2>
             <p class="calculators-description">Los calculos son estimativos y deben ser revisados por un abogado para cada caso en particular.</p>
             
@@ -251,9 +256,33 @@
             </div>
         </section>
 
-        <section >
+        <section id="nosotros">
+
+            <svg id="iconLeft" xmlns="http://www.w3.org/2000/svg" class="arrow-slider" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5z"/>
+            </svg>
+            <div class="testimonials">
+                <div id="testimonialsContainer">
+
+                </div>
+            </div>
+            <svg id="iconRight" xmlns="http://www.w3.org/2000/svg"  class="arrow-slider" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"/>
+            </svg>
 
         </section>
+        <a 
+            class="btn-wpp" 
+            href="https://wa.link/afriol" 
+            target="_blank" 
+            rel="noopener noreferrer"
+            id="whatsappButton"
+        >
+            <svg class="wpp-icon" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+                <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+            </svg>
+            <span>Chateá con nosotros</span>
+        </a>
     </main>
 
     <footer>
