--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                             class="services-card-img"
                             src="./assets/accidenteTrabajo.jpg" 
                             alt="Servicio para accidentes de trabajo"
+                            loading="lazy"
                         >
                     </figure>
                 </article>
@@ -103,6 +104,7 @@
                             class="services-card-img"
                             src="./assets/accidenteTransito.jpg" 
                             alt="Servicio para accidentes de transito"
+                            loading="lazy"
                         >
                     </figure>
                 </article>
@@ -119,6 +121,7 @@
                             class="services-card-img"
                             src="./assets/despido.jpg" 
                             alt="Servicio para despidos"
+                            loading="lazy"
                         >
                     </figure>
                 </article>
@@ -136,6 +139,7 @@
                             class="services-card-img"
                             src="./assets/sucesion.jpg" 
                             alt="Servicio para sucesiones"
+                            loading="lazy"
                         >
                     </figure>
                 </article>
@@ -152,6 +156,7 @@
                             class="services-card-img"
                             src="./assets/defensaConsumidor2.jpg" 
                             alt="Servicio para accidentes de transito"
+                            loading="lazy"
                         >
                     </figure>
                 </article>
@@ -168,12 +173,13 @@
                             class="services-card-img"
                             src="./assets/sumario.jpg" 
                             alt="Servicio para accidentes de transito"
+                            loading="lazy"
                         >
                     </figure>
                 </article>
             </div>
             <div class="space-to-scroll" id="calculadoras"></div>
-            <h2 class="calculators-title">Nuestras Calculadoras</h2>
+            <h2 class="calculators-title">Nuestras <strong>Calculadoras</strong></h2>
             <p class="calculators-description">Los calculos son estimativos y deben ser revisados por un abogado para cada caso en particular.</p>
             
             <div class="calculators-container">
@@ -271,14 +277,15 @@
                 </div>
             </div>
 
-            <div class="lawer-card">
+            <div class="lawyer-card">
                 <img 
-                    class="lawer-card-img"
+                    class="lawyer-card-img"
                     src="./assets/AbogadoLisandroErreguerena.jpg" 
-                    alt="Dr. Lisandro Erreguerena">
+                    alt="Dr. Lisandro Erreguerena"
+                    loading="lazy">
                 <div>
-                    <h3 class="lawer-card-name">Dr. Lisandro Erreguerena</h3>
-                    <ul class="lawer-card-list">
+                    <h3 class="lawyer-card-name">Dr. Lisandro Erreguerena</h3>
+                    <ul class="lawyer-card-list">
                         <li>Abogado (UNICEN), Mediador y Negociador (IANCA) con experiencia en áreas administrativas y de gestión de recursos humanos.</li>
                         <li>Oficial Ayudante del Subescalafón Profesional del Ministerio de Seguridad de la provincia de Buenos Aires.</li>
                         <li>Profesor de Derecho (por concurso) de la Materia Derecho de la Tecnicatura Superior en PYMES del Instituto 2 “Marie Malere”</li>
@@ -289,21 +296,22 @@
                 </div>    
             </div>
 
-            <div class="lawer-card">
+            <div class="lawyer-card">
                 <img
-                    class="lawer-card-img" 
+                    class="lawyer-card-img" 
                     src="./assets/AbogadoFranciscoSabalua.jpeg" 
-                    alt="Dr. Francisco Sabalúa">
+                    alt="Dr. Francisco Sabalúa"
+                    loading="lazy">
                 <div class="container-order-two">
-                    <h3 class="lawer-card-name">Dr. Francisco M. Sabalúa</h3>
-                    <ul class="lawer-card-list">
+                    <h3 class="lawyer-card-name">Dr. Francisco M. Sabalúa</h3>
+                    <ul class="lawyer-card-list">
                         <li>Abogado egresado de la Universidad Nacional de Buenos Aires, año 2002.</li>
                         <li>Profesor de Derecho Administrativo de Facultad de Derecho de Unicen desde el año 2004.</li>
                         <li>Especialista de Derecho Administrativo de la Universidad Nacional de Rosario, año 2016.</li>
                         <li>Doctorando en Derecho por la Universidad Nacional de Rosario.</li>
                     </ul>
-                    <h4 class="lawer-card-h4">Areas de desempeño</h4>
-                    <p class="lawer-card-p">Daños y Perjuicios, derecho laboral y empleo público, accidentes de trabajo y enfermades profesionales,
+                    <h4 class="lawyer-card-h4">Areas de desempeño</h4>
+                    <p class="lawyer-card-p">Daños y Perjuicios, derecho laboral y empleo público, accidentes de trabajo y enfermades profesionales,
                         defensa del consumidor, sucesiones, familia, licitaciones públicas y concursos Públicos
                     </p>
                 </div>
@@ -337,8 +345,58 @@
         </a>
     </main>
 
-    <footer>
- 
+    <footer class="footer">
+        <div>
+            <h2 class="footer-title"><strong>Contactános</strong></h2>
+            <iframe class="footer-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10748.779961765795!2d-59.865829719774766!3d-36.77940908222937!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959427436149ed93%3A0x58c8b2e29d8b288e!2sEstudio%20Jur%C3%ADdico%20Erreguerena%20%26%20Sabal%C3%BAa%20%7C%20Abogados%20en%20Azul!5e0!3m2!1ses!2sar!4v1695238394198!5m2!1ses!2sar" tyle="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <section class="footer-info">
+            <div>
+                <h3 class="footer-h3">Nuestras redes sociales</h3>
+                <a class="footer-social" href="https://www.instagram.com/estudio.erreguerena.sabalua/" target="_blank" rel="noopener noreferrer">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                        <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
+                    </svg>
+                    Instagram
+                </a>
+                <a class="footer-social" href="http://facebook.com" target="_blank" rel="noopener noreferrer">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                        <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+                    </svg>
+                    Facebook
+                </a>
+            </div>
+
+            <div>
+                <h3 class="footer-h3">Teléfono</h3>
+                <div class="footer-phone">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                        <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                    </svg>
+                    <a href="http://whatsapp.com" target="_blank" rel="noopener noreferrer">02281 40-7959</a>
+                </div>
+            </div>
+            <div>
+                <h3 class="footer-h3">Dirección</h3>
+                <div class="footer-location">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                        <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
+                        <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                    </svg>
+                    <p>Hipólito Yrigoyen 477, B7300 Azul, Provincia de Buenos Aires</p>
+                </div>
+            </div>
+            <div>
+                <h3 class="footer-h3">Correo</h3>
+                <div class="footer-mail">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                        <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+                      </svg>
+                    <a href="">correo@correo.com</a>
+                </div>
+            </div>
+        </section>
+        
     </footer>
 
     <script src="./js/index.js"></script>
